Fix color contrast issues

--- a/StyleSheet/quiz.css
+++ b/StyleSheet/quiz.css
@@ -11,7 +11,7 @@ body {
 	margin: 0;
 }
 .quiz-container {
-	background-color: #eb5967;
+	background-color: #cc2c67;
 	border-radius: 50px;
 	margin-top: 5rem;
 	width: 70%;
@@ -49,7 +49,7 @@ ul li label {
 	cursor: pointer;
 	margin: 0 0 2rem 32rem;
 	padding: 1rem 3rem;
-	background-color: #cc2c67;
+	background-color: #fa7268;
 	border-radius: 20px;
 }
 .button:hover {
